# stat-359-final-proj

./: .gitignore  README.md  pyproject.toml
arithmetic_llm/: QUICK_START_SUMMARY.md  README.md  arithmetic_verifier.py  grpo_trainer.py  train_grpo.py
report/: build_report_figures.py  final_project_slides.pptx
reward_ablation/: README.md  __init__.py  analyze_reward_ablation.py  experiment.py  reward_designs.py  run_reward_ablation.py  wandb_utils.py
tests/: test_grpo_trainer.py  test_reward_designs.py
