[project]
name = "stat-359-final-proj"
version = "0.1.0"
description = "Arithmetic LLM training and GRPO reward-ablation experiments"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "matplotlib>=3.10.0",
  "numpy>=1.26.0,<3",
  "seaborn>=0.13.0",
  "tensorboard>=2.19.0",
  "torch>=2.7.1",
  "tqdm>=4.67.0",
  "wandb>=0.17,<1.0",
]

[tool.uv]
package = false
